language selector on mobile fix

--- a/themes/sale/assets/css/snippet-currency-selector.css
+++ b/themes/sale/assets/css/snippet-currency-selector.css
@@ -2,6 +2,12 @@
   padding: 1rem 0.625rem;
 }
 
+@media (max-width: 640px) {
+  .snippet-currency-selector {
+    padding: 1rem 0.25rem;
+  }
+}
+
 span.select2-container--sellix-currency-selector .selection span.select2-selection--single {
   display: flex!important;
   border: 1px solid var(--black1, #E9EDF0);
@@ -207,11 +213,4 @@ span.select2-container--sellix-currency-selector .select2-dropdown .select2-curr
   .span.select2-container--sellix-currency-selector .select2-dropdown {
     min-width: 95px !important;
   }
-}
-
-@media (max-width: 400px) {
-  .snippet-currency-selector {
-    padding: 1rem 0.25rem;
-  }
-
 }
