--- a/themes/sale/assets/css/snippet-language-selector.css
+++ b/themes/sale/assets/css/snippet-language-selector.css
@@ -2,7 +2,7 @@
   padding: 1rem 0.625rem;
 }
 
-@media (max-width: 400px) {
+@media (max-width: 640px) {
   .snippet-language-selector {
     padding: 1rem 0.25rem;
   }
